--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,10 @@ endif()
 include(${Geant4_USE_FILE})
 include_directories(${PROJECT_SOURCE_DIR}/include)
 
+
+
+# find_library(ZMQ_LIB libzmq)
+
 file(GLOB_RECURSE sources ${PROJECT_SOURCE_DIR}/src/*.cc)
 file(GLOB_RECURSE headers ${PROJECT_SOURCE_DIR}/include/*.hh)
 file(GLOB_RECURSE macros RELATIVE ${PROJECT_SOURCE_DIR} macro/*.mac)
@@ -24,6 +28,6 @@ foreach(_file ${macros})
 endforeach()
 
 add_executable(app main.cc ${sources} ${headers})
-target_link_libraries(app ${Geant4_LIBRARIES})
+target_link_libraries(app ${Geant4_LIBRARIES} zmq)
 
 install(TARGETS app DESTINATION bin)
